@@ -5,6 +5,7 @@ Revision history for FCGI-Buffer
 	Added t/cache.t
 	Fix '(in cleanup) Can't call method "READ" on an undefined value'
 		Perl >= 5.14.0 only
+	Improved handling of Wide characters
 
 0.02	Sat Jan 31 11:16:28 EST 2015
 	Fix set_options
